name:                nameless
version:             0.1.0.0
synopsis:            Simple brainfuck derivative
description:         Nameless is an esoteric programming language based on brainfuck where you write the source files only using ones and zeros, making it look like binary.
homepage:            https://github.com/bforte/nameless-lang#README.md
author:              BMO
maintainer:          bforte@inventati.org
copyright:           2018 BMO
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable nameless
  hs-source-dirs:      src
  main-is:             Nameless.hs
  default-language:    Haskell2010
  ghc-options:         -Wunused-imports -Wunused-matches -Wincomplete-patterns
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , microlens
                     , microlens-mtl
                     , microlens-th
                     , mtl
                     , parsec
                     , random
